다크 모드로 보기 기능 추가

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </main>
 
     <script src="src/utils/validator.js"></script>
+    <script type="mudle" src="src/utils/const.js"></script>
     <script type="module" src="src/api.js"></script>
     <script type="module" src="src/components/ImageInfo.js"></script>
     <script type="module" src="src/components/SearchInput.js"></script>
